[package]
name = "oxido"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "0.11.1"
clap = { version = "3.1.18", features = ["derive"] }
serde_json = "1.0.81"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
eyre = "0.6.8"
logos = "0.12.1"
codespan = "0.11.1"